univention-virtual-machine-manager-node (3.0.4-1) unstable; urgency=low

  * Bug #36605: Increase timeout in check script

 -- Philipp Hahn <hahn@univention.de>  Thu, 08 Jan 2015 10:33:36 +0100

univention-virtual-machine-manager-node (3.0.3-3) unstable; urgency=low

  * Bug #37215: Load kernel module 'bridge'

 -- Philipp Hahn <hahn@univention.de>  Mon, 08 Dec 2014 12:02:07 +0100

univention-virtual-machine-manager-node (3.0.3-2) unstable; urgency=low

  * Bug #36476: Forcibly remove initscript from all runlevels 

 -- Erik Damrose <damrose@univention.de>  Fri, 14 Nov 2014 18:01:22 +0100

univention-virtual-machine-manager-node (3.0.3-1) unstable; urgency=low

  * Bug #36376: Remove broken symlink
  * Bug #33694: Setup empty bridge

 -- Philipp Hahn <hahn@univention.de>  Wed, 05 Nov 2014 20:50:23 +0100

univention-virtual-machine-manager-node (3.0.2-3) unstable; urgency=low

  * Bug #33694: Adapt bridge transfer to ifupdown change

 -- Philipp Hahn <hahn@univention.de>  Wed, 05 Nov 2014 18:13:11 +0100

univention-virtual-machine-manager-node (3.0.2-2) unstable; urgency=low

  * Bug #36388: Add dependency on qemu-utils

 -- Philipp Hahn <hahn@univention.de>  Mon, 03 Nov 2014 11:56:59 +0100

univention-virtual-machine-manager-node (3.0.2-1) unstable; urgency=low

  * Bug #33694: Disable bridge creation by default
  * Update to rename from libvirt-bin to libvirtd.
  * Update template file from Debian-Wheezy.
  * debian/control: Remove Andreas Büsching.

 -- Philipp Hahn <hahn@univention.de>  Mon, 20 Oct 2014 16:03:49 +0200

univention-virtual-machine-manager-node (3.0.1-1) unstable; urgency=low

  * Bug #35656 UVMM: Drop Xen support

 -- Philipp Hahn <hahn@univention.de>  Tue, 07 Oct 2014 15:33:30 +0200

univention-virtual-machine-manager-node (3.0.0-1) unstable; urgency=low

  * UCS-4.0 version bump (Bug #35425)

 -- Philipp Hahn <hahn@univention.de>  Mon, 21 Jul 2014 16:14:49 +0200

univention-virtual-machine-manager-node (2.0.5-8) unstable; urgency=low
