@@ -1,6 +1,7 @@
 univention-virtual-machine-manager-node (3.0.4-1) unstable; urgency=low
 
   * Bug #36605: Increase timeout in check script
+  * Bug #35069: Improve libvirt-check script
 
  -- Philipp Hahn <hahn@univention.de>  Thu, 08 Jan 2015 10:33:36 +0100
 
